fix: sendSmsRequestRoute issues